[package]
name = "bazuka"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A high-performance, single key mutivalued async-capable cache library for Rust with per value expiry, designed for speed and efficiency."
exclude = [
    "src/bin",
]
repository = "https://github.com/ToxicalNoob3062/bazuka"

[dependencies]
dashmap = "6.1.0"
moka = { version = "0.12.10", features = ["future"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

[dev-dependencies]
rand = "0.9.1"
